--- a/course.html
+++ b/course.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="wrap">
-        <div class="header">
+        <div class="header course-nav">
             <div class="nav">
                 <h1><a href="#">hex school</a></h1>
                 <div class="nav-menu">
@@ -29,108 +29,76 @@
                         <li><a href="qa.html">問答</a></li>
                     </ul>
                 </div>
+
             </div>
-
             <div class="banner">
+                <h2>HTML、 CSS 開發網站<br><span>從無到有學習網頁設計</span></h2>
 
-                <h2>歡迎來到<span>六角學院</span></h2>
-                <h2>帶你一起攻略前端設計</h2>
-                <a href="#data" class=" hvr-wobble-vertical">
-                    <buttom>馬上去註冊 <div class="banner-text">➜</div>
+                <a href="#" class=" hvr-wobble-vertical">
+                    <buttom>現在上課去 <div class="banner-text">➜</div>
                     </buttom>
                 </a>
+                <div class="logo">
+                    <img src="/img/html.png" alt="html">
+                    <img src="/img/css.png" alt="css">
+                </div>
 
             </div>
+
+
+
 
         </div>
-        <div class="content-index">
-
-            <div class="course">
-                <div class="main-top">
-                    <div class="main-text">
-                        <h2>精選課程</h2>
-                        <h3>幫助你拿到前端工程師的門票</h3>
-                    </div>
-
-                    <a href="#">更多課程</a>
+        <div class="content-course">
+            <div class="intro">
+                <div class="teacher">
+                    <img src="img/teacher.png" alt="teacher">
+                    <h2>廖洧杰<br><span>老師</span></h2>
+                    <ul>
+                        <li>高雄前端社群發起人</li>
+                        <li>中華電信前端講師</li>
+                        <li>高雄大學前端講師</li>
+                        <li>十年實務經驗</li>
+                        <li>授課時數超過一千小時</li>
+                    </ul>
                 </div>
-                <ul class="item">
-                    <li class=" hvr-wobble-vertical"><img src="/img/html5.png" alt="html5">
-                        <h2>Html 5 基礎教學</h2>
-                        <p>主流前端網站設計的基礎，透過實際的範例，瞭解正確的網站開發流程。</p>
-                    </li>
+                <div class="compare">
+                    <h2>這堂課有什麼特別的 ? <span> 六角課程的四大優點</span></h2>
 
-                    <li class=" hvr-wobble-vertical"><img src="/img/rwd.png" alt="rwd">
-                        <h2>響應式網站設計</h2>
-                        <p>六角學院提供業界響應式開發方法，讓學生瞭解完善的行動版開發觀念。</p>
-                    </li>
-                    <li class=" hvr-wobble-vertical"><img src="/img/jQuery.png" alt="jQuery">
-                        <h2>jQuery 實戰教學</h2>
-                        <p>分為四大主題:變數的使用、操作DOM、基本數學運算和套件運用。</p>
-                    </li>
-                </ul>
+                    <ol>
+                        <li>有能力排出具專業、語意化、美觀的網頁設計。</li>
+                        <li>課程結束後，會提供給你一個完整的網頁設計稿，當你實作出網頁後，就可以轉交六角學院的講師們進行程式碼審視，以確保你吸收的網頁排版觀念是正確的。</li>
+                        <li>了解設計網頁的脈絡，你隨時可以在社群裡發問問題，我們永遠都會在這裡!</li>
+                        <li>獲得持續更新的講義教材，終身複習不會脫離趨勢的現代化線上課程。</li>
+                    </ol>
+
+                </div>
+                <div class="learn">
+                    <h2>課程大綱 <span>最扎實的學習內容編排</span></h2>
+                    <ul>
+                        <li class="learn-head">章節標題</li>
+                        <li class="learn-text">網頁編輯器、HTML基礎教學</li>
+                        <li class="learn-head">CSS 常用語法</li>
+                        <li class="learn-text">使用CSS變更HTML標籤特性</li>
+                        <li class="learn-head">網頁排版技巧 Part I</li>
+                        <li class="learn-text">網頁排版技巧 Part II</li>
+                        <li class="learn-head">切圖技巧</li>
+                        <li class="learn-text">表格與表單設計技巧</li>
+                        <li class="learn-head">CSS3技巧</li>
+                        <li class="learn-text">最後，讓你的網頁變得更專業</li>
+                        <li class="learn-head">課程作業</li>
+                    </ul>
+                </div>
             </div>
-            <div class="compare">
-                <h2>課程比較</h2>
-                <h3>線上課程與實體課程差異</h3>
-                <table class="compare-table">
-                    <tr>
-                        <th class="compare-text">項目</th>
-                        <th class="compare-th compare-w">六角學院 線上課程</th>
-                        <th class="compare-th compare-w">一般線上課程</th>
-                        <th class="compare-th ">一般實體課程</th>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">費用</td>
-                        <td class="compare-color">較低</td>
-                        <td class="compare-color">較低</td>
-                        <td>較高</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">學習效果</td>
-                        <td>一般</td>
-                        <td>較低</td>
-                        <td class="compare-color">很好</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">Code review</td>
-                        <td class="compare-color">有</td>
-                        <td>無</td>
-                        <td>不一定</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">課程更新速度</td>
-                        <td class="compare-color">普通</td>
-                        <td class="compare-color">普通</td>
-                        <td>較慢</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">多次複習</td>
-                        <td class="compare-color">可</td>
-                        <td class="compare-color">可</td>
-                        <td>不可</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">字幕</td>
-                        <td class="compare-color">有</td>
-                        <td>不一定</td>
-                        <td>板書</td>
-                    </tr>
-                </table>
-            </div>
-            <div class="message">
-                <h2>你就是六角的下一位學生!<br>
-                    快留下資料讓我們認識你吧
-                </h2>
-
-                <form id="data" action="index.html">
-                    <input type="text" name="name" placeholder="你的名字是?">
-                    <input type="text" name="mail" placeholder="example@mail.com.tw">
-                    <input type="submit" value="送出" class="hvr-wobble-vertical">
-                </form>
 
 
-            </div>
+        </div>
+        <div class="joinus">
+            <h2>心動不如馬上行動 ! <br>現在就成為我們的學生吧</h2>
+            <a href="#" class=" hvr-wobble-vertical">
+                <buttom>馬上去註冊 <div>➜</div>
+                </buttom>
+            </a>
         </div>
         <div class="footer">
             <div class="logo"> <img src="/img/logo.png" alt="logo">
