--- a/qa.html
+++ b/qa.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="wrap">
-        <div class="header">
+        <div class="header qa">
             <div class="nav">
                 <h1><a href="#">hex school</a></h1>
                 <div class="nav-menu">
@@ -30,107 +30,80 @@
                     </ul>
                 </div>
             </div>
-
-            <div class="banner">
-
-                <h2>歡迎來到<span>六角學院</span></h2>
-                <h2>帶你一起攻略前端設計</h2>
-                <a href="#data" class=" hvr-wobble-vertical">
-                    <buttom>馬上去註冊 <div class="banner-text">➜</div>
-                    </buttom>
-                </a>
-
+            <div class="main">
+                <h2>遇到問題了嗎?<br><span>別擔心，你想找的答案都在這裡!</span></h2>
+                <form action="qa.html">
+                    <input type="text" name="qa">
+                </form>
             </div>
 
         </div>
-        <div class="content-index">
-
-            <div class="course">
-                <div class="main-top">
-                    <div class="main-text">
-                        <h2>精選課程</h2>
-                        <h3>幫助你拿到前端工程師的門票</h3>
-                    </div>
-
-                    <a href="#">更多課程</a>
-                </div>
-                <ul class="item">
-                    <li class=" hvr-wobble-vertical"><img src="/img/html5.png" alt="html5">
-                        <h2>Html 5 基礎教學</h2>
-                        <p>主流前端網站設計的基礎，透過實際的範例，瞭解正確的網站開發流程。</p>
-                    </li>
-
-                    <li class=" hvr-wobble-vertical"><img src="/img/rwd.png" alt="rwd">
-                        <h2>響應式網站設計</h2>
-                        <p>六角學院提供業界響應式開發方法，讓學生瞭解完善的行動版開發觀念。</p>
-                    </li>
-                    <li class=" hvr-wobble-vertical"><img src="/img/jQuery.png" alt="jQuery">
-                        <h2>jQuery 實戰教學</h2>
-                        <p>分為四大主題:變數的使用、操作DOM、基本數學運算和套件運用。</p>
-                    </li>
-                </ul>
+        <div class="content-qa">
+            <div class="qa-text">
+                <h2>常見問題 #</h2>
+                <h3>你想問的說不定也在這裡</h3>
             </div>
-            <div class="compare">
-                <h2>課程比較</h2>
-                <h3>線上課程與實體課程差異</h3>
-                <table class="compare-table">
-                    <tr>
-                        <th class="compare-text">項目</th>
-                        <th class="compare-th compare-w">六角學院 線上課程</th>
-                        <th class="compare-th compare-w">一般線上課程</th>
-                        <th class="compare-th ">一般實體課程</th>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">費用</td>
-                        <td class="compare-color">較低</td>
-                        <td class="compare-color">較低</td>
-                        <td>較高</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">學習效果</td>
-                        <td>一般</td>
-                        <td>較低</td>
-                        <td class="compare-color">很好</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">Code review</td>
-                        <td class="compare-color">有</td>
-                        <td>無</td>
-                        <td>不一定</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">課程更新速度</td>
-                        <td class="compare-color">普通</td>
-                        <td class="compare-color">普通</td>
-                        <td>較慢</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">多次複習</td>
-                        <td class="compare-color">可</td>
-                        <td class="compare-color">可</td>
-                        <td>不可</td>
-                    </tr>
-                    <tr>
-                        <td class="compare-text">字幕</td>
-                        <td class="compare-color">有</td>
-                        <td>不一定</td>
-                        <td>板書</td>
-                    </tr>
-                </table>
+
+            <h4>Q : 為什麼你們要用Udemy放你們的影音課程，他有什麼好處嗎?</h4>
+            <p>A : 他除了可上傳影音課程外，同時也能上傳我們設計出來的範例程式碼、設計單選題目，並能在IOS、Andorid上面學習，同時也能追隨每位學生的學習機制，讓我們放心挑選Udemy作我們的教學平台。</p>
+            <h4>Q : 影片課程有時效性嗎?</h4>
+            <p>A : 完全沒有，此課程提供終身複習服務，你隨時可聽到我們即時更新的影音課程內容。</p>
+            <h4>Q : 我很擔心學完後還是學不會網頁設計，有什麼辦法嗎?</h4>
+            <p>A : 課程結束後我們會提供給你網頁設計稿，做完後 mail 給我們， <a href="mailto:service@hexschool.com">service@hexschool.com</a>
+                ，我們會替你進行程式碼檢視，以確保你的觀念吸收正確。
+            </p>
+            <div class="qa-text">
+                <h2>怎麼付款 #</h2>
+                <h3>付款方式保證最多元</h3>
             </div>
-            <div class="message">
-                <h2>你就是六角的下一位學生!<br>
-                    快留下資料讓我們認識你吧
-                </h2>
 
-                <form id="data" action="index.html">
-                    <input type="text" name="name" placeholder="你的名字是?">
-                    <input type="text" name="mail" placeholder="example@mail.com.tw">
-                    <input type="submit" value="送出" class="hvr-wobble-vertical">
-                </form>
+            <h4>Q : 請問可以分期付款嗎?</h4>
+            <p class="qa-menu">A : 當然沒問題，在本平台購買我們最高提供6期分期。
+            <ol>
+                <li>選擇產品後</li>
+                <li>在進入金流平台付款時可選擇信用卡分期付款</li>
+                <li>選擇期數，旁邊會附註每期應付款項</li>
+            </ol>
+            </p>
 
-
+            <h4>Q : 我沒有信用卡，有沒有其他匯款方案?</h4>
+            <p>A : 每個課程現在都提供了其他付款方式，在課程連結旁就可以找到這個其他付款方式，而且我們是採用台灣第三支付，安全又可靠。</p>
+            <h4>Q : 採用其他付款流程，但還沒有收到課程怎麼辦?</h4>
+            <p>A : 課程會在48小時內寄出，如果沒有收到可以透過右下角的客服，或直接 mail 至我們的信箱 <a href="">service@hexschool.com</a>，我們會盡快處理以保障您的權益。</p>
+            <div class="qa-text">
+                <h2>我想退款 #</h2>
+                <h3>期待你再次成為我們的學生</h3>
             </div>
+
+            <h4>Q : 如果怕線上影音課程吸收不好，可以要求退費嗎?</h4>
+            <p>A : 沒問題! Udemy在30天內都可申請退款!</p>
+            <h4>Q : Udemy如何退款?</h4>
+            <p>A : 透過Udemy的課程頁面的 選項 下即可使用退款功能。</p>
+            <h4>Q : 其他支付流程如何退款?</h4>
+            <p class="qa-menu">A : 請發信到 <a href="mailto:service@hexschool.com">service@hexschool.com</a> 並詳著以下內容:
+            <ul>
+                <li>退款帳戶</li>
+                <li>Udemy 用戶名稱</li>
+                <li>購買時間</li>
+                <li>退款原因</li>
+            </ul>
+            </p>
+
+            <h5>接下來，我們會有專人協助退款。退款後請注意:</h5>
+            <ul>
+                <li>退款後酌收第三方支付手續費，信用卡一次付清2.8%、分三期3%、分六期3.5%、分12期7%、ATM為1%，超商為28元。</li>
+                <li>退款後亦不能參與任何線上討論以及每週的線上問答</li>
+                <li>退款後的學員再下次購買時，我們會先提供測試帳號7天再次鑑賞，確認該學員有需上這門課程，才能購買該次課程。</li>
+            </ul>
+        </div>
+        <div class="message-qa">
+            <h2>找不到你的問題嗎 ?<br>直接寄信給我們解決吧 !</h2>
+            <form action="qa.html">
+                <input type="text" placeholder="你的名字是?" name="name">
+                <input type="text" placeholder="example@mail.com.tw" name="mail">
+                <textarea name="question" id="" cols="30" rows="10" placeholder="你遇到什麼困難呢?"></textarea>
+                <input class=" hvr-wobble-vertical" type="submit" nmae="submit" value="送出">
+            </form>
         </div>
         <div class="footer">
             <div class="logo"> <img src="/img/logo.png" alt="logo">
