--- a/qa.html
+++ b/qa.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="FB上的網址" />
     <meta property="og:image" content="FB的圖片" />
-    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="all.css">
     <title>多頁式網站</title>
 </head>
 
